# Epoch

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
Streamlit/: PATHS.py  config.py  main.py  myutils.py  pages.py  utils.py
Streamlit/.streamlit/: config.toml
Streamlit/AutoViz_Plots/species/: distplots_nums.html  heatmaps.html  kde_plots.html  pair_scatters.html  scatterplots.html  violinplots.html
Streamlit/assets/: styles.css
Streamlit/components/: cars.py  data_profiling.py  eda_function.py  preprocessing.py  sagemaker_connection.py  summarizer.py
Streamlit/views/: data_loading.py  data_profile_report.py  supervised_analysis.py  unsupervised_analysis.py
