[tool.poetry]
name = "explainablity"
version = "0.1.0"
description = ""
authors = ["Pratham <agarwalpratham2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
ipykernel = "^6.21.3"
tabulate = "^0.9.0"
future = "^0.18.3"
requests = "^2.28.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
ipywidgets = "^8.0.4"
streamlit = "^1.20.0"
streamlit-pandas-profiling = "^0.1.3"
py-autoclean = "^1.1.3"
emoji = "^2.2.0"
jenkspy = "^0.3.2"
openai = "^0.27.2"
bnlearn = "^0.7.14"
setuptools = "^67.6.0"
st-pages = "^0.3.5"
streamlit-extras = "^0.2.6"
openml = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
